internal/tee_operator/assets/android/arm64-v8a/libreclaim.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package command-line-arguments */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 3 "libreclaim.go"


#include <stddef.h>
#include <stdlib.h>
#include <stdbool.h>

// Opaque handle for protocol session
typedef struct reclaim_protocol* reclaim_protocol_t;

// Error codes
typedef enum {
    RECLAIM_SUCCESS = 0,
    RECLAIM_ERROR_INVALID_ARGS = -1,
    RECLAIM_ERROR_CONNECTION_FAILED = -2,
    RECLAIM_ERROR_PROTOCOL_FAILED = -3,
    RECLAIM_ERROR_TIMEOUT = -4,
    RECLAIM_ERROR_MEMORY = -5,
    RECLAIM_ERROR_SESSION_NOT_FOUND = -6,
    RECLAIM_ERROR_ALREADY_COMPLETED = -7
} reclaim_error_t;

// Callback function type for lazy loading ZK circuits.
// The callback receives the algorithm ID and should call InitAlgorithm
// with the appropriate proving key and r1cs data.
// Returns nothing - initialization happens asynchronously.
// IMPORTANT: The callback MUST ensure that MarkZKInitComplete is called
// with the result (true/false) when initialization is finished.
typedef void (*zk_init_callback_t)(unsigned char algorithm_id);

// Global callback pointer (set via SetZKInitCallback)
static zk_init_callback_t g_zk_init_callback = NULL;

// C wrapper to invoke the callback from Go
static inline void invoke_zk_init_callback(unsigned char algorithm_id) {
    if (g_zk_init_callback != NULL) {
        g_zk_init_callback(algorithm_id);
    }
}

// C function to set the callback (called from SetZKInitCallback export)
static inline void set_zk_init_callback_internal(zk_init_callback_t cb) {
    g_zk_init_callback = cb;
}

#line 1 "cgo-generated-wrapper"

#line 3 "flutter_logger.go"

#include <stdlib.h>

// Function pointer type for Flutter callback with progress support
typedef void (*LogCallback)(const char* level, const char* message, const char* fields, int progress_percentage, const char* progress_description);

// Global callback storage
static LogCallback flutter_log_callback = NULL;

// Helper to call the callback - made static inline to prevent duplicate symbols
static inline void call_flutter_log(const char* level, const char* message, const char* fields, int progress_percentage, const char* progress_description) {
    if (flutter_log_callback != NULL) {
        flutter_log_callback(level, message, fields, progress_percentage, progress_description);
    }
}

// Store the callback
static void store_log_callback(LogCallback callback) {
    flutter_log_callback = callback;
}

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern reclaim_error_t reclaim_execute_protocol(char* request_json, char* config_json, char** claim_json, int* claim_length);
extern void reclaim_free_string(char* str);
extern char* reclaim_get_error_message(reclaim_error_t error);
extern char* reclaim_get_version(void);
extern GoUint8 InitAlgorithm(GoUint8 algorithmID, GoSlice provingKey, GoSlice r1cs);
extern void MarkZKInitComplete(unsigned char algorithmID, _Bool success);
extern void SetZKInitCallback(zk_init_callback_t callback);

/* Return type for GetAlgorithmID */
struct GetAlgorithmID_return {
	unsigned char r0; /* algorithmID */
	_Bool r1; /* found */
};
extern struct GetAlgorithmID_return GetAlgorithmID(char* cipher);
extern char* GetCipherName(unsigned char algorithmID);
extern _Bool IsAlgorithmInitialized(unsigned char algorithmID);
extern void Free(void* pointer);

/* Return type for Prove */
struct Prove_return {
	void* r0; /* proofRes */
	GoInt r1; /* resLen */
};
extern struct Prove_return Prove(GoSlice params);

/* Return type for GenerateOPRFRequestData */
struct GenerateOPRFRequestData_return {
	void* r0; /* proofRes */
	GoInt r1; /* resLen */
};
extern struct GenerateOPRFRequestData_return GenerateOPRFRequestData(GoSlice params);

/* Return type for TOPRFFinalize */
struct TOPRFFinalize_return {
	void* r0; /* proofRes */
	GoInt r1; /* resLen */
};
extern struct TOPRFFinalize_return TOPRFFinalize(GoSlice params);

/* Return type for ExtractHTMLElementsIndexes */
struct ExtractHTMLElementsIndexes_return {
	void* r0; /* resultPtr */
	GoInt r1; /* resultLen */
};
extern struct ExtractHTMLElementsIndexes_return ExtractHTMLElementsIndexes(GoSlice params);

/* Return type for ExtractJSONValueIndexes */
struct ExtractJSONValueIndexes_return {
	void* r0; /* resultPtr */
	GoInt r1; /* resultLen */
};
extern struct ExtractJSONValueIndexes_return ExtractJSONValueIndexes(GoSlice params);
extern int set_log_callback(void* callback);
extern void clear_log_callback(void);

#ifdef __cplusplus
}
#endif